exports[`test should render a date picker with disabled dates 1`] = `
<ResponsiveElement
  className="terra-DatePicker"
  defaultElement={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      endDate={"2017-01-01T00:00:00.000Z"}
      excludeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      fixedHeight={true}
      includeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      locale="en-US"
      maxDate={"2017-01-01T00:00:00.000Z"}
      minDate={"2017-01-01T00:00:00.000Z"}
      monthsShown={1}
      name="date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      selected={"2017-01-01T00:00:00.000Z"}
      selectsEnd={false}
      selectsStart={false}
      showMonthDropdown={true}
      showYearDropdown={true}
      startDate={"2017-01-01T00:00:00.000Z"}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={true} />
  }
  responsiveTo="window"
  small={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      endDate={"2017-01-01T00:00:00.000Z"}
      excludeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      fixedHeight={true}
      includeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      locale="en-US"
      maxDate={"2017-01-01T00:00:00.000Z"}
      minDate={"2017-01-01T00:00:00.000Z"}
      monthsShown={1}
      name="date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      selected={"2017-01-01T00:00:00.000Z"}
      selectsEnd={false}
      selectsStart={false}
      showMonthDropdown={true}
      showYearDropdown={true}
      startDate={"2017-01-01T00:00:00.000Z"}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={false} />
  } />
`;

exports[`test should render a date picker with filtered dates 1`] = `
<ResponsiveElement
  className="terra-DatePicker"
  defaultElement={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      endDate={"2017-01-01T00:00:00.000Z"}
      excludeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      filterDate={[Function]}
      fixedHeight={true}
      includeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      locale="en-US"
      maxDate={"2017-01-01T00:00:00.000Z"}
      minDate={"2017-01-01T00:00:00.000Z"}
      monthsShown={1}
      name="date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      selected={"2017-01-01T00:00:00.000Z"}
      selectsEnd={false}
      selectsStart={false}
      showMonthDropdown={true}
      showYearDropdown={true}
      startDate={"2017-01-01T00:00:00.000Z"}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={true} />
  }
  responsiveTo="window"
  small={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      endDate={"2017-01-01T00:00:00.000Z"}
      excludeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      filterDate={[Function]}
      fixedHeight={true}
      includeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      locale="en-US"
      maxDate={"2017-01-01T00:00:00.000Z"}
      minDate={"2017-01-01T00:00:00.000Z"}
      monthsShown={1}
      name="date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      selected={"2017-01-01T00:00:00.000Z"}
      selectsEnd={false}
      selectsStart={false}
      showMonthDropdown={true}
      showYearDropdown={true}
      startDate={"2017-01-01T00:00:00.000Z"}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={false} />
  } />
`;

exports[`test should render a date picker with included dates 1`] = `
<ResponsiveElement
  className="terra-DatePicker"
  defaultElement={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      endDate={"2017-01-01T00:00:00.000Z"}
      excludeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      fixedHeight={true}
      includeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      locale="en-US"
      maxDate={"2017-01-01T00:00:00.000Z"}
      minDate={"2017-01-01T00:00:00.000Z"}
      monthsShown={1}
      name="date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      selected={"2017-01-01T00:00:00.000Z"}
      selectsEnd={false}
      selectsStart={false}
      showMonthDropdown={true}
      showYearDropdown={true}
      startDate={"2017-01-01T00:00:00.000Z"}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={true} />
  }
  responsiveTo="window"
  small={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      endDate={"2017-01-01T00:00:00.000Z"}
      excludeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      fixedHeight={true}
      includeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      locale="en-US"
      maxDate={"2017-01-01T00:00:00.000Z"}
      minDate={"2017-01-01T00:00:00.000Z"}
      monthsShown={1}
      name="date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      selected={"2017-01-01T00:00:00.000Z"}
      selectsEnd={false}
      selectsStart={false}
      showMonthDropdown={true}
      showYearDropdown={true}
      startDate={"2017-01-01T00:00:00.000Z"}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={false} />
  } />
`;

exports[`test should render a date picker with min and max dates 1`] = `
<ResponsiveElement
  className="terra-DatePicker"
  defaultElement={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      endDate={"2017-01-01T00:00:00.000Z"}
      excludeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      fixedHeight={true}
      includeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      locale="en-US"
      maxDate={"2017-01-01T00:00:00.000Z"}
      minDate={"2017-01-01T00:00:00.000Z"}
      monthsShown={1}
      name="date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      selected={"2017-01-01T00:00:00.000Z"}
      selectsEnd={false}
      selectsStart={false}
      showMonthDropdown={true}
      showYearDropdown={true}
      startDate={"2017-01-01T00:00:00.000Z"}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={true} />
  }
  responsiveTo="window"
  small={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      endDate={"2017-01-01T00:00:00.000Z"}
      excludeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      fixedHeight={true}
      includeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      locale="en-US"
      maxDate={"2017-01-01T00:00:00.000Z"}
      minDate={"2017-01-01T00:00:00.000Z"}
      monthsShown={1}
      name="date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      selected={"2017-01-01T00:00:00.000Z"}
      selectsEnd={false}
      selectsStart={false}
      showMonthDropdown={true}
      showYearDropdown={true}
      startDate={"2017-01-01T00:00:00.000Z"}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={false} />
  } />
`;

exports[`test should render a date range 1`] = `
<div
  className="terra-DatePicker-range">
  <DatePicker
    isEndDateRange={false}
    isStartDateRange={true}
    name="start-date-input"
    onChange={[Function]}
    utcOffset={0} />
  <DatePicker
    isEndDateRange={true}
    isStartDateRange={false}
    name="end-date-input"
    onChange={[Function]}
    utcOffset={0} />
</div>
`;

exports[`test should render a default date input and date picker 1`] = `
<ResponsiveElement
  className="terra-DatePicker"
  defaultElement={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      endDate={"2017-01-01T00:00:00.000Z"}
      excludeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      fixedHeight={true}
      includeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      locale="en-US"
      maxDate={"2017-01-01T00:00:00.000Z"}
      minDate={"2017-01-01T00:00:00.000Z"}
      monthsShown={1}
      name="date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      selected={"2017-01-01T00:00:00.000Z"}
      selectsEnd={false}
      selectsStart={false}
      showMonthDropdown={true}
      showYearDropdown={true}
      startDate={"2017-01-01T00:00:00.000Z"}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={true} />
  }
  responsiveTo="window"
  small={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      endDate={"2017-01-01T00:00:00.000Z"}
      excludeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      fixedHeight={true}
      includeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      locale="en-US"
      maxDate={"2017-01-01T00:00:00.000Z"}
      minDate={"2017-01-01T00:00:00.000Z"}
      monthsShown={1}
      name="date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      selected={"2017-01-01T00:00:00.000Z"}
      selectsEnd={false}
      selectsStart={false}
      showMonthDropdown={true}
      showYearDropdown={true}
      startDate={"2017-01-01T00:00:00.000Z"}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={false} />
  } />
`;

exports[`test should render a default date input with custom input attributes 1`] = `
<ResponsiveElement
  className="terra-DatePicker"
  defaultElement={
    <t
      customInput={
        <DatePickerInput
          inputAttributes={
            Object {
              "id": "terra-date-input",
            }
          } />
      }
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      endDate={"2017-01-01T00:00:00.000Z"}
      excludeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      fixedHeight={true}
      includeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      locale="en-US"
      maxDate={"2017-01-01T00:00:00.000Z"}
      minDate={"2017-01-01T00:00:00.000Z"}
      monthsShown={1}
      name="date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      selected={"2017-01-01T00:00:00.000Z"}
      selectsEnd={false}
      selectsStart={false}
      showMonthDropdown={true}
      showYearDropdown={true}
      startDate={"2017-01-01T00:00:00.000Z"}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={true} />
  }
  responsiveTo="window"
  small={
    <t
      customInput={
        <DatePickerInput
          inputAttributes={
            Object {
              "id": "terra-date-input",
            }
          } />
      }
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      endDate={"2017-01-01T00:00:00.000Z"}
      excludeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      fixedHeight={true}
      includeDates={
        Array [
          "2017-01-01T00:00:00.000Z",
        ]
      }
      locale="en-US"
      maxDate={"2017-01-01T00:00:00.000Z"}
      minDate={"2017-01-01T00:00:00.000Z"}
      monthsShown={1}
      name="date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      selected={"2017-01-01T00:00:00.000Z"}
      selectsEnd={false}
      selectsStart={false}
      showMonthDropdown={true}
      showYearDropdown={true}
      startDate={"2017-01-01T00:00:00.000Z"}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={false} />
  } />
`;
